@@ -1,4 +1,5 @@
 ﻿10.2.28.alpha.1 - 16th May 2024
+- For 'Enhance minimap', added support for Narcissus custom minimap button.
 - For 'Mute mount sounds', fixed an issue whereby mount sounds would be muted/unmuted on startup even if the option was disabled.
 
 10.2.26 - 8th May 2024
